deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: revise-tools-service
  namespace: cops
spec:
  selector:
    app: revise-tools-server
  type: ClusterIP
  ports:
    - name: httpport
      port: 8080
      protocol: TCP
      targetPort: 8080
